# siren

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: handler.rs  main.rs
src/commands/: meta.rs
src/hooks/: user_error.rs
